5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1764_1576.log
== TEST (2019-05-23 17:15:10) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11)
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 8
    if(ve[i] == 11 and vb[i]== 11)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:15:26) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11):
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:16:17) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11):
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:29:40) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11):
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
	i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:30:24) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11):
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
	i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
1.2548
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:35:01) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11):
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
391.367
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:36:47) 
-- CODE:
from numpy import*
ve =  array(eval(input("Vetor 1: ")))
vb =  array(eval(input("Vetor 2: ")))
i = 0
e = 0
b = 0
while i < size(ve) and i < size(vb):
	if(ve[i] == 11 and vb[i]== 11):
		e = e + 1
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 22):
		b = b + 1
	elif(ve[i] == 11 and vb[i] == 33):
		e = e + 1
	elif(ve[i] == 22 and vb[i] == 22):
		e = e + 1
		b = b + 1
	elif(ve[i] == 22 and vb[i] == 11):
		e = e + 1 
	elif(ve[i] == 22 and vb[i] == 33):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 33):
		e = e + 1
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 11):
		b = b + 1
	elif(ve[i] == 33 and vb[i] == 22):
		e = e + 1
	i = i + 1		
print(i)
if(e > b):
	print("EUSAPIA")
elif(b > e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
1.08885
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
